--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             <p>Account</p>
         </div>
     </div>
+    <div class="SidebarDiv">
+        <div class="IconDiv">
+            <img src="user.svg" alt="">
+        </div>
+        <div class="IconDiv">
+            <img src="pencil.svg" alt="">
+        </div>
+        <div class="IconDiv">
+            <img src="envelope.svg" alt="">
+        </div>
+        <div class="IconDiv">
+            <img src="settings.svg" alt="">
+        </div>
+    </div>
     <div class="StartDiv">
         <div class="EntranceDiv">
             <div class="GreetingsDiv">
@@ -92,6 +106,12 @@
                 <p>Top Fiddle Players</p>
             </div>
         </div>
+    </div>
+
+    <div class="BottomDiv">
+        <p>Ihor Bezprozvannyi</p>
+        <p>bi092006@gmail.com</p>
+        <p>+352 661 220 221</p>
     </div>
 </body>
 </html>
