laptop size added

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiddle And Sticks</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleGeneral.css">
+    <link rel="stylesheet" href="styleLaptop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="HeaderDiv">
+        <img src="Fiddlesticks Icon.webp" alt="">
         <div class="TitleDiv">
             <h2>Fiddle And Sticks</h2>
         </div>
@@ -29,10 +31,16 @@
             <img src="user.svg" alt="">
         </div>
         <div class="IconDiv">
+            <img src="following.svg" alt="">
+        </div>
+        <div class="IconDiv">
             <img src="pencil.svg" alt="">
         </div>
         <div class="IconDiv">
             <img src="envelope.svg" alt="">
+        </div>
+        <div class="IconDiv">
+            <img src="bookmark.svg" alt="">
         </div>
         <div class="IconDiv">
             <img src="settings.svg" alt="">
