nav&sidebar changes

--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
             <h2>Fiddle And Sticks</h2>
         </div>
         <div class="NavigationDiv">
-            <p>Home</p>
             <p>News</p>
+            <p>Friends</p>
+            <p>HELP!</p>
             <p>Guide</p>
-            <p>Account</p>
         </div>
     </div>
     <div class="SidebarDiv">
         <div class="IconDiv">
             <img src="user.svg" alt="">
-        </div>
-        <div class="IconDiv">
-            <img src="following.svg" alt="">
         </div>
         <div class="IconDiv">
             <img src="pencil.svg" alt="">
