Profile SignIn Page Added

--- a/FiddleAndSticks.html
+++ b/FiddleAndSticks.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiddle And Sticks</title>
-    <link rel="stylesheet" href="styleGeneral.css">
-    <link rel="stylesheet" href="styleLaptop.css">
+
+    <link rel="stylesheet" href="FiddleAndSticks.css">
+    <link rel="stylesheet" href="General.css">
+    <link rel="stylesheet" href="FiddleAndSticksLaptop.css">
+    <link rel="stylesheet" href="HSF.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="HeaderDiv">
-        <img src="Fiddlesticks Icon.webp" alt="">
+        <a href="FiddleAndSticks.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
         <div class="TitleDiv">
             <h2>Fiddle And Sticks</h2>
         </div>
@@ -28,7 +33,7 @@
     </div>
     <div class="SidebarDiv">
         <div class="IconDiv">
-            <img src="user.svg" alt="">
+            <a href="Profile.html"><img src="user.svg" alt=""></a>
         </div>
         <div class="IconDiv">
             <img src="pencil.svg" alt="">
@@ -102,7 +107,7 @@
         <div class="PreviewDiv">
             <img src="risenfiddle.jpg" alt="">
             <div class="AbsoluteTextDiv">
-                <p>Fiddle Builds</p>
+                <p>Fiddle Community</p>
             </div>
         </div>
         <div class="PreviewDiv">
