--- a/Profile.html
+++ b/Profile.html
@@ -17,7 +17,7 @@
 <body>
     <img class="img" src="fiddleSketch.jpg" alt="">
     <div class="HeaderDiv">
-        <a href="FiddleAndSticks.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
+        <a href="index.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
         <div class="TitleDiv">
             <h2>Fiddle And Sticks</h2>
         </div>
