--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="HeaderDiv">
-        <a href="FiddleAndSticks.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
+        <a href="index.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
         <div class="TitleDiv">
             <h2>Fiddle And Sticks</h2>
         </div>
