--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiddle And Sticks</title>
 
-    <link rel="stylesheet" href="FiddleAndSticks.css">
-    <link rel="stylesheet" href="General.css">
-    <link rel="stylesheet" href="FiddleAndSticksLaptop.css">
-    <link rel="stylesheet" href="HSF.css">
+    <link rel="stylesheet" href="styles/FiddleAndSticks.css">
+    <link rel="stylesheet" href="styles/General.css">
+    <link rel="stylesheet" href="styles/FiddleAndSticksLaptop.css">
+    <link rel="stylesheet" href="styles/HSF.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
