Post page added

--- a/Post.html
+++ b/Post.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
 
-    <link rel="stylesheet" href="styles/Profile.css">
-    <link rel="stylesheet" href="styles/HSFProfile.css">
-    <link rel="stylesheet" href="styles/GeneralPfrofile.css">
+    <link rel="stylesheet" href="styles/Post.css">
+    <link rel="stylesheet" href="styles/General.css">
+    <link rel="stylesheet" href="styles/FiddleAndSticksLaptop.css">
+    <link rel="stylesheet" href="styles/HSF.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +15,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
+
+    <title>Post</title>
 </head>
 <body>
+
     <div class="HeaderDiv">
         <a href="index.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
         <div class="TitleDiv">
@@ -29,6 +32,7 @@
             <p>Guide</p>
         </div>
     </div>
+
     <div class="SidebarDiv">
         <div class="IconDiv">
             <a href="Profile.html"><img src="user.svg" alt=""></a>
@@ -46,16 +50,15 @@
             <img src="settings.svg" alt="">
         </div>
     </div>
-
     <div class="ContainerDiv">
-        <div class="SignInDiv">
-            <h3>Sign In</h3>
-            <p class="login">Login</p>
-            <input type="text">
-            <p class="pass">Password</p>
-            <input type="password">
-            <button>Proceed</button>
+        <h1>Post Something New!</h1>
+        <div class="PostGridDiv">
+            <input type="text" class="Title" placeholder="Title">
+            <input type="text" class="Theme" placeholder="Theme">
+            <textarea class="PostInsidesText" placeholder="Post Insides Here..."></textarea>
         </div>
     </div>
+
+    
 </body>
 </html>
