--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="Profile.html"><img src="user.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <img src="pencil.svg" alt="">
+            <a href="Post.html"><img src="pencil.svg" alt=""></a>
         </div>
         <div class="IconDiv">
             <img src="envelope.svg" alt="">
