Messages Page Added

--- a/Messages.html
+++ b/Messages.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Messages</title>
 
-    <link rel="stylesheet" href="styles/Profile.css">
-    <link rel="stylesheet" href="styles/HSFProfile.css">
-    <link rel="stylesheet" href="styles/GeneralPfrofile.css">
+    <link rel="stylesheet" href="styles/Messages.css">
+    <link rel="stylesheet" href="styles/GeneralMessages.css">
+    <link rel="stylesheet" href="styles/HSFMessages.css">
+    <link rel="stylesheet" href="styles/MessagesLaptop.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="HeaderDiv">
@@ -29,6 +31,7 @@
             <p>Guide</p>
         </div>
     </div>
+
     <div class="SidebarDiv">
         <div class="IconDiv">
             <a href="Profile.html"><img src="user.svg" alt=""></a>
@@ -47,14 +50,33 @@
         </div>
     </div>
 
-    <div class="ContainerDiv">
-        <div class="SignInDiv">
-            <h3>Sign In</h3>
-            <p class="login">Login</p>
-            <input type="text">
-            <p class="pass">Password</p>
-            <input type="password">
-            <button>Proceed</button>
+    <div class="ChatsGridDiv">
+        <div class="ChatDiv">
+            <div class="ProfileInfoDiv">
+                <img class="ProfilePicture" src="profile.png" alt="Profile Picture">
+                <h3 class="UserName">UserName</h3>
+            </div>
+            <div class="TextBoxDiv">
+                <p class="LatestMessage">Latest Message</p>
+            </div>
+        </div>
+        <div class="ChatDiv">
+            <div class="ProfileInfoDiv">
+                <img class="ProfilePicture" src="profile.png" alt="Profile Picture">
+                <h3 class="UserName">UserName</h3>
+            </div>
+            <div class="TextBoxDiv">
+                <p class="LatestMessage">Latest Message</p>
+            </div>
+        </div>
+        <div class="ChatDiv">
+            <div class="ProfileInfoDiv">
+                <img class="ProfilePicture" src="profile.png" alt="Profile Picture">
+                <h3 class="UserName">UserName</h3>
+            </div>
+            <div class="TextBoxDiv">
+                <p class="LatestMessage">Latest Message</p>
+            </div>
         </div>
     </div>
 </body>
