--- a/Post.html
+++ b/Post.html
@@ -6,7 +6,6 @@
 
     <link rel="stylesheet" href="styles/Post.css">
     <link rel="stylesheet" href="styles/General.css">
-    <link rel="stylesheet" href="styles/FiddleAndSticksLaptop.css">
     <link rel="stylesheet" href="styles/HSF.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +40,7 @@
             <a href="Post.html"><img src="pencil.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <img src="envelope.svg" alt="">
+            <a href="Messages.html"><img src="envelope.svg" alt=""></a>
         </div>
         <div class="IconDiv">
             <img src="bookmark.svg" alt="">
