--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="Post.html"><img src="pencil.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <img src="envelope.svg" alt="">
+            <a href="Messages.html"><img src="envelope.svg" alt=""></a>
         </div>
         <div class="IconDiv">
             <img src="bookmark.svg" alt="">
