cleanup + friends page done

--- a/Post.html
+++ b/Post.html
@@ -20,33 +20,32 @@
 <body>
 
     <div class="HeaderDiv">
-        <a href="index.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
+        <a href="index.html"><img src="img/Fiddlesticks Icon.webp" alt=""></a>
         <div class="TitleDiv">
             <h2>Fiddle And Sticks</h2>
         </div>
         <div class="NavigationDiv">
-            <p>News</p>
-            <p>Friends</p>
-            <p>HELP!</p>
-            <p>Guide</p>
+            <a>News</a>
+            <a href="friends.html">Friends</a>
+            <a>HELP!</a>
+            <a>Guide</a>
         </div>
     </div>
-
     <div class="SidebarDiv">
         <div class="IconDiv">
-            <a href="Profile.html"><img src="user.svg" alt=""></a>
+            <a href="Profile.html"><img src="img/user.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <a href="Post.html"><img src="pencil.svg" alt=""></a>
+            <a href="Post.html"><img src="img/pencil.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <a href="Messages.html"><img src="envelope.svg" alt=""></a>
+            <a href="Messages.html"><img src="img/envelope.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <img src="bookmark.svg" alt="">
+            <img src="img/bookmark.svg" alt="">
         </div>
         <div class="IconDiv">
-            <img src="settings.svg" alt="">
+            <img src="img/settings.svg" alt="">
         </div>
     </div>
     <div class="ContainerDiv">
