--- a/friends.html
+++ b/friends.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Friends</title>
 
-    <link rel="stylesheet" href="styles/Profile.css">
-    <link rel="stylesheet" href="styles/HSFProfile.css">
+    <link rel="stylesheet" href="styles/friends.css">
     <link rel="stylesheet" href="styles/GeneralPfrofile.css">
-
+    <link rel="stylesheet" href="styles/HSFProfile.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="HeaderDiv">
@@ -46,15 +47,21 @@
             <img src="img/settings.svg" alt="">
         </div>
     </div>
-
     <div class="ContainerDiv">
-        <div class="SignInDiv">
-            <h3>Sign In</h3>
-            <p class="login">Login</p>
-            <input type="text">
-            <p class="pass">Password</p>
-            <input type="password">
-            <button>Proceed</button>
+        <input type="text" name="" id="" placeholder="Find Some New Friends!">
+        <div class="FriendsListDiv">
+            <div class="FriendDiv">
+                <img class="ProfilePicture" src="img/profile.png" alt="Profile Picture">
+                <h3 class="UserName">UserName</h3>
+            </div>
+            <div class="FriendDiv">
+                <img class="ProfilePicture" src="img/profile.png" alt="Profile Picture">
+                <h3 class="UserName">UserName</h3>
+            </div>
+            <div class="FriendDiv">
+                <img class="ProfilePicture" src="img/profile.png" alt="Profile Picture">
+                <h3 class="UserName">UserName</h3>
+            </div>
         </div>
     </div>
 </body>
