--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
 </head>
 <body>
     <div class="HeaderDiv">
-        <a href="index.html"><img src="Fiddlesticks Icon.webp" alt=""></a>
+        <a href="index.html"><img src="img/Fiddlesticks Icon.webp" alt=""></a>
         <div class="TitleDiv">
             <h2>Fiddle And Sticks</h2>
         </div>
         <div class="NavigationDiv">
-            <p>News</p>
-            <p>Friends</p>
-            <p>HELP!</p>
-            <p>Guide</p>
+            <a>News</a>
+            <a href="friends.html">Friends</a>
+            <a>HELP!</a>
+            <a>Guide</a>
         </div>
     </div>
     <div class="SidebarDiv">
         <div class="IconDiv">
-            <a href="Profile.html"><img src="user.svg" alt=""></a>
+            <a href="Profile.html"><img src="img/user.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <a href="Post.html"><img src="pencil.svg" alt=""></a>
+            <a href="Post.html"><img src="img/pencil.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <a href="Messages.html"><img src="envelope.svg" alt=""></a>
+            <a href="Messages.html"><img src="img/envelope.svg" alt=""></a>
         </div>
         <div class="IconDiv">
-            <img src="bookmark.svg" alt="">
+            <img src="img/bookmark.svg" alt="">
         </div>
         <div class="IconDiv">
-            <img src="settings.svg" alt="">
+            <img src="img/settings.svg" alt="">
         </div>
     </div>
     <div class="StartDiv">
@@ -58,34 +58,34 @@
                 <p>Here you will fins all posiible information about this champoin, including Builds, Lore and Replays.</p>
                 <p>Good luck and have a nice time here, friends.</p>
             </div>
-            <img src="fiddleback.jpg" alt="">
+            <img src="img/fiddleback.jpg" alt="">
         </div>
         <div class="AbilitiesDiv">
             <div class="AbilitiesTitleDiv">
                 <h3>Abilities</h3>
             </div>
             <div class="AbilityDiv">
-                <img src="Fiddlesticks_A_Harmless_Scarecrow.webp" alt="">
+                <img src="img/Fiddlesticks_A_Harmless_Scarecrow.webp" alt="">
                 <h4>Scarecrow Effigy</h4>
             </div>
             <div class="AbilityDiv">
-                <img src="Fiddlesticks_A_Harmless_Scarecrow_2.webp" alt="">
+                <img src="img/Fiddlesticks_A_Harmless_Scarecrow_2.webp" alt="">
                 <h4>A Harmless Scarecrow</h4>
             </div>
             <div class="AbilityDiv">
-                <img src="Fiddlesticks_Terrify.webp" alt="">
+                <img src="img/Fiddlesticks_Terrify.webp" alt="">
                 <h4>Terrify</h4>
             </div>
             <div class="AbilityDiv">
-                <img src="Fiddlesticks_Bountiful_Harvest.webp" alt="">
+                <img src="img/Fiddlesticks_Bountiful_Harvest.webp" alt="">
                 <h4>Bountiful Harvest</h4>
             </div>
             <div class="AbilityDiv">
-                <img src="Fiddlesticks_Reap.webp" alt="">
+                <img src="img/Fiddlesticks_Reap.webp" alt="">
                 <h4>Reap</h4>
             </div>
             <div class="AbilityDiv">
-                <img src="Fiddlesticks_Crowstorm.webp" alt="">
+                <img src="img/Fiddlesticks_Crowstorm.webp" alt="">
                 <h4>Crowstorm</h4>
             </div>
         </div>
@@ -93,25 +93,25 @@
     
     <div class="DisplayDiv">
         <div class="PreviewDiv">
-            <img src="basicfiddle.jpg" alt="">
+            <img src="img/basicfiddle.jpg" alt="">
             <div class="AbsoluteTextDiv">
                 <p>Fiddle Lore</p>
             </div>
         </div>
         <div class="PreviewDiv">
-            <img src="piratesticks.jpg" alt="">
+            <img src="img/piratesticks.jpg" alt="">
             <div class="AbsoluteTextDiv">
                 <p>Fiddle Replays</p>
             </div>
         </div>
         <div class="PreviewDiv">
-            <img src="risenfiddle.jpg" alt="">
+            <img src="img/risenfiddle.jpg" alt="">
             <div class="AbsoluteTextDiv">
                 <p>Fiddle Community</p>
             </div>
         </div>
         <div class="PreviewDiv">
-            <img src="pumpkinsticks.jpg" alt="">
+            <img src="img/pumpkinsticks.jpg" alt="">
             <div class="AbsoluteTextDiv">
                 <p>Top Fiddle Players</p>
             </div>
